--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>bands</title>
+	<title>band</title>
 	<link rel="stylesheet" href="../css/all.min.css">
 	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../css/animate.min.css">
 	<link rel="stylesheet" href="../css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="../css/index.css">
@@ -21,6 +22,7 @@
 				<li><a href="#">BAND</a></li>
 				<li><a href="#">TOUR</a></li>
 				<li><a href="#">CONTACT</a></li>
+				<li><a href="#">MERTH</a></li>
 				<li><a href="#">MORE <i class="fa fa-angle-down"></i> </a>
 					<ul class="sub">
 						<li><a href=""></a>Marchandise</a></li>
@@ -32,6 +34,7 @@
 		</nav>
 		<div class="search">
 			<i class="fa fa-search"></i>
+			<i class="fa fa-bars last"></i>
 		</div>
 	</header>
 	<div class="slide swiper-container">
@@ -179,12 +182,12 @@
 	<footer>
 		<div class="container">
 		<div class="sns">
-			<i class="fa fa-snowman"></i>
-			<i class="fa fa-snowman"></i>
-			<i class="fa fa-snowman"></i>
-			<i class="fa fa-snowman"></i>
-			<i class="fa fa-snowman"></i>
-			<i class="fa fa-snowman"></i>
+			<i class="fa fa-facebook-official"></i>
+			<i class="fa fa-instagram"></i>
+			<i class="fa fa-snapchat"></i>
+			<i class="fa fa-pinterest"></i>
+			<i class="fa fa-twitter"></i>
+			<i class="fa fa-linkedin"></i>
 		</div>
 		<p>Powered by <a href="#">w3.css</a></p>
 	</div>
