--- a/public/html/index.html
+++ b/public/html/index.html
@@ -153,7 +153,7 @@
 		<div class="contact-wrap">
 		<div class="icon-wrap">
 			<div class="loc">
-				<i class="fa fa-location-arrow"></i>
+				<i class="fa fa-map-marker"></i>
 				<p> Chicago, US</p>
 			</div>
 			<div class="call">
@@ -161,17 +161,21 @@
 				<p> Phone: +00 151515</p>
 			</div>
 			<div class="email">
-				<i class="fa fa-mail-bulk"></i>
+				<i class="fa fa-envelope"></i>
 				<p> Email: mail@mail.com</p>
 			</div>
 		</div>
 		<div class="send-wrap">
 			<div class="send">
+			<form>
 			<input type="name" value="Name" class="name">
 			<input type="email" value="email" class="email">
+			</form>
 		</div>
+		<form>
 			<input type="message" value="message" class="message">
 			<button class="bt">SEND</button>
+		</form>
 		</div>
 	</div>
 	</div>
