--- a/public/html/index.html
+++ b/public/html/index.html
@@ -168,12 +168,12 @@
 		<div class="send-wrap">
 			<div class="send">
 			<form>
-			<input type="name" value="Name" class="name">
-			<input type="email" value="email" class="email">
+			<input class="name" type="text" placeholder="Name" required="" name="Name">
+			<input class="email" type="text" placeholder="email" required="" name="email">
 			</form>
 		</div>
 		<form>
-			<input type="message" value="message" class="message">
+			<input class="message" type="text" placeholder="message" required="" name="message">
 			<button class="bt">SEND</button>
 		</form>
 		</div>
