--- a/public/html/index.html
+++ b/public/html/index.html
@@ -15,27 +15,43 @@
 </head>
 
 <body>
-	<header>
-		<nav>
-			<ul class="gnb">
-				<li><a href="#">HOME</a></li>
-				<li><a href="#">BAND</a></li>
-				<li><a href="#">TOUR</a></li>
-				<li><a href="#">CONTACT</a></li>
-				<li><a href="#">MERTH</a></li>
-				<li><a href="#">MORE <i class="fa fa-angle-down"></i> </a>
-					<ul class="sub">
-						<li><a href=""></a>Marchandise</a></li>
-						<li><a href=""></a>Extras</a></li>
-						<li><a href=""></a>Media</a></li>
-					</ul>
-				</li>
-			</ul>
+	<header class="header-wrapper">
+		<nav class="navi-wrapper">
+			<div class="navi">
+				<a href="#">HOME</a>
+			</div>
+			<div class="navi">
+				<a href="#">BAND</a>
+			</div>
+			<div class="navi">
+				<a href="#">TOUR</a>
+			</div>
+			<div class="navi">
+				<a href="#">CONTACT</a>
+			</div>
+			<div class="navi more">
+				<a href="#">MORE <i class="fa fa-caret-down"></i></a>
+				<ul class="more-wrap">
+					<li><a href="#">Merchandise</a></li>
+					<li><a href="#">Extras</a></li>
+					<li><a href="#">Media</a></li>
+				</ul>
+			</div>
 		</nav>
-		<div class="search">
-			<i class="fa fa-search"></i>
-			<i class="fa fa-bars last"></i>
+		<div class="search-wrapper">
+			<div class="search-wrap">
+				<i class="fa fa-search"></i>
+			</div>
+			<div class="bar-wrap">
+				<i class="fa fa-bars"></i>
+			</div>
 		</div>
+		<ul class="mo-navi-wrapper">
+			<li class="mo-navi"><a href="#">BAND</a></li>
+			<li class="mo-navi"><a href="#">TOUR</a></li>
+			<li class="mo-navi"><a href="#">CONTACT</a></li>
+			<li class="mo-navi"><a href="#">MERCH</a></li>
+		</ul>
 	</header>
 	<div class="slide swiper-container">
 		<ul class="slide-wrap swiper-wrapper">
@@ -180,8 +196,8 @@
 	</div>
 	</div>
 	</div>
-	<div class="map">
-		<img src="../img/map.jpg" alt="" class="w-100">
+	<div id="map" style="width:100%;height:350px;"></div>
+		
 	</div>
 	<footer>
 		<div class="container">
@@ -196,6 +212,7 @@
 		<p>Powered by <a href="#">w3.css</a></p>
 	</div>
 	</footer>
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=500215b9d89ed0fcee8f393638d1f657"></script>
 	<script src="../js/index.js"></script>
 </body>
 
